--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "esp32_mqtt_publish"
+name = "esp32-mqtt-publish"
 version = "0.1.0"
 edition = "2021"
 
@@ -24,6 +24,7 @@ esp-idf-sys = { version = "0.31.6", features = ["binstart"] } # `native` uses ES
 icm42670                = { git = "https://github.com/jessebraham/icm42670" }
 shtcx = "0.10.0"
 shared-bus = "0.2.4"
+toml-cfg = "0.1.3"
 
 [build-dependencies]
 anyhow = "1.0.58"
